[project]
name = "neuron"
version = "0.0.0"
description = ""
authors = [{name = "Tomas Sandven"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp (>=3.11.18,<4.0.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "rich (>=14.0.0,<15.0.0)",
    "orjson (>=3.10.18,<4.0.0)",
]
packages = [ "neuron" ]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
