[project]
name = "neuron"
version = "0.0.0"
description = ""
authors = [{name = "Tomas Sandven"}]
readme = "README.md"
requires-python = ">=3.13.2,<4"
dependencies = [
    "aiohttp (>=3.11.18,<4.0.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "rich (>=14.0.0,<15.0.0)",
    "orjson (>=3.10.18,<4.0.0)",
    "watchdog (>=6.0.0,<7.0.0)",
    "sanic (>=25.3.0,<26.0.0)",
    "pydantic (>=2.11.9,<3.0.0)",
]
packages = [ "neuron" ]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "homeassistant>=2025.10.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
ignore = ["F403", "E731"]

[tool.pytest]
python_files = ["*_test.py"]
testpaths = ["neuron"]
asyncio_mode = "auto"
